--- a/wlogout/.config/wlogout/style.css
+++ b/wlogout/.config/wlogout/style.css
@@ -21,7 +21,7 @@ by Stephan Raabe (2023)
  * ----------------------------------------------------- */
 
 * {
-    font-family: 'JetbraisMono Nerd Font';
+    font-family: 'JetBrainsMono Nerd Font';
     background-image: none;
     transition: 20ms;
     box-shadow: none;
@@ -99,4 +99,3 @@ d*/
     border-radius: 20px;
     background-image: image(url('icons/reboot.png'));
 }
-
